<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">
    <!--Registration form-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Registration form:"
        android:textSize="80px"
        android:gravity="center"
        android:layout_margin="5dp"
        android:textColor="@color/textColor"/>

    <!--username reg-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Username:"
        android:textColor="@color/textColor"
        />

    <EditText
        android:id="@+id/registerEtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/etUsernameHint"
        android:textColorHint="@color/textHintColor"
        android:textColor="@color/textColor"/>

    <!--pw and repeat pw-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Password:"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textHintColor"/>

    <EditText
        android:id="@+id/registerEtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/etPasswordHint"
        android:textColorHint="@color/textHintColor"
        android:textColor="@color/textColor"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:text="Repeat your password:"/>

    <EditText
        android:id="@+id/registerEtRepeatPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Repet your password"
        android:textColorHint="@color/textHintColor"
        android:inputType="textPassword"
        android:textColor="@color/textColor"/>

    <!--Email-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Email:"
        android:textColor="@color/textColor"/>

    <EditText
        android:id="@+id/registerEtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter your email"
        android:textColorHint="@color/textHintColor"
        android:textColor="@color/textColor"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp">

        <Button
            android:id="@+id/registerBtnRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btnRegister"
            android:textColor="@color/textColor"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/btnLogin"/>

        <Button
            android:id="@+id/registerBtnCancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/btnCancel"
            android:textColor="@color/textColor"
            android:layout_margin="5dp"
            android:background="@color/btnRegister"/>


    </LinearLayout>

</LinearLayout>